--- a/Angular/primerproyecto/src/app/app.component.html
+++ b/Angular/primerproyecto/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div>
-  <primer-component></primer-component>
+  <!-- <primer-component></primer-component>
   <hr/>
   <app-deportes></app-deportes>
-  <hr/>
+  <hr/> -->
+  <!-- <app-formulario-binding-model></app-formulario-binding-model> -->
+    <app-formulario-referencia></app-formulario-referencia>
 </div>
