--- a/Angular/primerproyecto/src/app/app.component.html
+++ b/Angular/primerproyecto/src/app/app.component.html
@@ -4,5 +4,6 @@
   <app-deportes></app-deportes>
   <hr/> -->
   <!-- <app-formulario-binding-model></app-formulario-binding-model> -->
-    <app-formulario-referencia></app-formulario-referencia>
+    <!-- <app-formulario-referencia></app-formulario-referencia> -->
+    <app-tabla-multiplicar></app-tabla-multiplicar>
 </div>
