--- a/Angular/rutasangular/src/app/app.component.html
+++ b/Angular/rutasangular/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div>
   <app-menu></app-menu>
+  <app-menucollatz></app-menucollatz>
   <hr/>
   <div style="background-color: chartreuse;">
     <router-outlet></router-outlet>
