--- a/Angular/rutasangular/src/app/components/menu/menu.component.html
+++ b/Angular/rutasangular/src/app/components/menu/menu.component.html
@@ -11,4 +11,10 @@
     <li>
         <a [routerLink]="['/television']">Televisión</a>
     </li>
+    <li>
+        <a [routerLink]="['/numeroDoble']">Doble</a>
+    </li>
+    <li>
+        <a [routerLink]="['/numeroDoble/7']">Doble con Parámetro</a>
+    </li>
 </ul>
