--- a/Angular/rutasangular/src/app/components/menu/menu.component.html
+++ b/Angular/rutasangular/src/app/components/menu/menu.component.html
@@ -1,20 +1,23 @@
 <ul id="menu">
     <li>
-        <a [routerLink]="['/home']">Home</a>
+        <a [routerLink]="['/home']">Home{{" "}}</a>
     </li>
     <li>
-        <a [routerLink]="['/musica']">Música</a>
+        <a [routerLink]="['/musica']">Música{{" "}}</a>
     </li>
     <li>
-        <a [routerLink]="['/cine']">Cine</a>
+        <a [routerLink]="['/cine']">Cine{{" "}}</a>
     </li>
     <li>
-        <a [routerLink]="['/television']">Televisión</a>
+        <a [routerLink]="['/television']">Televisión{{" "}}</a>
     </li>
     <li>
-        <a [routerLink]="['/numeroDoble']">Doble</a>
+        <a [routerLink]="['/numeroDoble']">Doble{{" "}}</a>
     </li>
     <li>
-        <a [routerLink]="['/numeroDoble/7']">Doble con Parámetro</a>
+        <a [routerLink]="['/numeroDoble/7']">Doble con Parámetro{{" "}}</a>
+    </li>
+    <li>
+        <a [routerLink]="['/listaproductos']">Productos{{" "}}</a>
     </li>
 </ul>
