--- a/Angular/rutasangular/src/app/components/menucollatz/menucollatz.component.html
+++ b/Angular/rutasangular/src/app/components/menucollatz/menucollatz.component.html
@@ -1,3 +1,3 @@
-<ul>
-    <li *ngFor="let num of numeros;let i = index" [routerLink]="['/collatz',num]">{{num}}</li>
+<ul id="menu">
+    <li *ngFor="let num of numeros;let i = index" [routerLink]="['/collatz',num]">{{num}} {{" "}}</li>
 </ul>
