--- a/Angular/rutasangular/src/app/app.component.html
+++ b/Angular/rutasangular/src/app/app.component.html
@@ -2,8 +2,9 @@
   <app-menu></app-menu>
   <app-menucollatz></app-menucollatz>
   <hr/>
-  <div style="background-color: chartreuse;">
+  <div style="background-color: cornflowerblue;">
     <router-outlet></router-outlet>
   </div>
+  <!-- <app-concesionario></app-concesionario> -->
   <hr/>
 </div>
