--- a/Angular/rutasangular/src/app/components/menu/menu.component.html
+++ b/Angular/rutasangular/src/app/components/menu/menu.component.html
@@ -20,4 +20,7 @@
     <li>
         <a [routerLink]="['/listaproductos']">Productos{{" "}}</a>
     </li>
+    <li>
+        <a [routerLink]="['/coche']">Coche{{" "}}</a>
+    </li>
 </ul>
