--- a/Angular/serviciosangular/src/app/components/comics/comics.component.html
+++ b/Angular/serviciosangular/src/app/components/comics/comics.component.html
@@ -1,1 +1,7 @@
-<p>comics works!</p>
+<div class="row justify-content-center">
+    <div class="col-8 text-center">
+        <h1>{{comic.nombre}}</h1>
+        <img src="comic.imagen" />
+        <h2>{{comic.descripcion}}</h2>
+    </div>
+</div><hr/>
