--- a/Angular/serviciosangular/src/app/components/menu/menu.component.html
+++ b/Angular/serviciosangular/src/app/components/menu/menu.component.html
@@ -3,7 +3,7 @@
     aria-label="Fourth navbar example"
   >
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">HOME</a>
+      <a class="navbar-brand" [routerLink]="['/home']">HOME</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -18,8 +18,6 @@
 
       <div class="collapse navbar-collapse" id="navbarsExample04">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
-          <li class="nav-item">
-            <a class="nav-link"  [routerLink]="['/home']">Home</a>
           <li class="nav-item">
             <a class="nav-link"  [routerLink]="['/libreria']">Librería</a>
           </li>
