--- a/Angular/serviciosangular/src/app/components/comics/comics.component.html
+++ b/Angular/serviciosangular/src/app/components/comics/comics.component.html
@@ -4,7 +4,7 @@
         <img width="150px" src="{{comic.imagen}}" />
         <h2>{{comic.descripcion}}</h2>
     </div>
-    <button (click)="favoritoHijo()">Favorito</button>
-    <button (click)="modificarHijo()">Modificar</button>
-    <button (click)="eliminarHijo()">Eliminar</button>
+    <button (click)="favoritoHijo()" style="background-color: darkorange;"><b>Favorito</b></button>
+    <button (click)="modificarHijo()" style="background-color: dodgerblue;"><b>Modificar</b></button>
+    <button (click)="eliminarHijo()" style="background-color: firebrick;"><b>Eliminar</b></button>
 </div><hr/>
