--- a/Angular/serviciosangular/src/app/app.component.html
+++ b/Angular/serviciosangular/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-menu></app-menu>
-<div style="background-color: cornflowerblue;">
+<div style="background-color: lightblue;">
     <router-outlet></router-outlet>
 </div>
