--- a/Angular/serviciosangular/src/app/components/menu/menu.component.html
+++ b/Angular/serviciosangular/src/app/components/menu/menu.component.html
@@ -21,6 +21,9 @@
           <li class="nav-item">
             <a class="nav-link"  [routerLink]="['/libreria']">Librería</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link"  [routerLink]="['/']">Servicios</a>
+          </li>
         </ul>
         <form>
           <input
