--- a/Angular/serviciosangular/src/app/components/menu/menu.component.html
+++ b/Angular/serviciosangular/src/app/components/menu/menu.component.html
@@ -3,7 +3,7 @@
     aria-label="Fourth navbar example"
   >
     <div class="container-fluid">
-      <a class="navbar-brand" [routerLink]="['/home']">HOME</a>
+      <a class="navbar-brand" [routerLink]="['/home']"><img width="100px" src="./../../../assets/images/Home/Angular.png"/></a>
       <button
         class="navbar-toggler"
         type="button"
