--- a/Angular/serviciosangular/src/app/components/menu/menu.component.html
+++ b/Angular/serviciosangular/src/app/components/menu/menu.component.html
@@ -22,7 +22,7 @@
             <a class="nav-link"  [routerLink]="['/libreria']">Librería</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link"  [routerLink]="['/']">Servicios</a>
+            <a class="nav-link"  [routerLink]="['/service']">Servicios</a>
           </li>
         </ul>
         <form>
