--- a/Angular/serviciosangular/src/app/components/comicsinyeccion/comicsinyeccion.component.html
+++ b/Angular/serviciosangular/src/app/components/comicsinyeccion/comicsinyeccion.component.html
@@ -1,1 +1,13 @@
-<p>comicsinyeccion works!</p>
+<div class="row justify-content-center">
+    <div class="col-8 text-center">
+        <div class="card" style="width: 18rem;"
+            *ngFor="let comic of comics">
+                <img src="{{comic.imagen}}" class="card-img-top" alt="{{comic.nombre}}"
+                title="{{comic.nombre}}">
+                <div class="card-body">
+                  <h5 class="card-title">{{comic.nombre}}</h5>
+                  <p class="card-text">{{comic.descripcion}}</p>
+                </div>
+            </div>
+    </div>
+</div>
