--- a/Angular/serviciosangular/src/app/components/menu/menu.component.html
+++ b/Angular/serviciosangular/src/app/components/menu/menu.component.html
@@ -24,6 +24,9 @@
           <li class="nav-item">
             <a class="nav-link"  [routerLink]="['/service']">Servicios</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link"  [routerLink]="['/servicepersona']">Servicios Persona</a>
+          </li>
         </ul>
         <form>
           <input
