--- a/Angular/serviciosangular/src/app/components/menu/menu.component.html
+++ b/Angular/serviciosangular/src/app/components/menu/menu.component.html
@@ -27,6 +27,9 @@
           <li class="nav-item">
             <a class="nav-link"  [routerLink]="['/servicepersona']">Servicios Persona</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link"  [routerLink]="['/servicempleado']">Servicios Empleado</a>
+          </li>
         </ul>
         <form>
           <input
