--- a/Angular/serviciosangular/src/app/components/menu/menu.component.html
+++ b/Angular/serviciosangular/src/app/components/menu/menu.component.html
@@ -30,6 +30,9 @@
           <li class="nav-item">
             <a class="nav-link"  [routerLink]="['/servicempleado']">Servicios Empleado</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link"  [routerLink]="['/servicempleadodos']">Servicios Empleado Dos</a>
+          </li>
         </ul>
         <form>
           <input
