--- a/Angular/serviciosangular/src/app/components/empleadosoficio/empleadosoficio.component.html
+++ b/Angular/serviciosangular/src/app/components/empleadosoficio/empleadosoficio.component.html
@@ -1,5 +1,23 @@
 <h1>API Empleados</h1>
 
-<select>
+<select name="selectoficio" #selectoficio>
     <option *ngFor="let oficio of oficios" value="{{oficio}}">{{oficio}}</option>
 </select>
+<button (click)="cargaEmpleadosOficio()">Mostrar</button>
+
+<hr/>
+
+<table *ngIf="empleados">
+    <thead>
+        <th>Apellido</th>
+        <th>Oficio</th>
+        <th>Salario</th>
+    </thead>
+    <tbody>
+        <tr *ngFor="let empleado of empleados">
+            <td>{{empleado.apellido}}</td>
+            <td>{{empleado.oficio}}</td>
+            <td>{{empleado.salario}}</td>
+        </tr>
+    </tbody>
+</table>
