--- a/Angular/angularcruddepartamento/src/app/components/menu/menu.component.html
+++ b/Angular/angularcruddepartamento/src/app/components/menu/menu.component.html
@@ -3,7 +3,7 @@
     aria-label="Fourth navbar example"
   >
     <div class="container-fluid">
-      <a class="navbar-brand" [routerLink]="['/home']"><img width="100px" src="./../../../assets/images/Home/Angular.png"/></a>
+      <a class="navbar-brand">Home</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -19,22 +19,10 @@
       <div class="collapse navbar-collapse" id="navbarsExample04">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link"  [routerLink]="['/libreria']">Librería</a>
+            <a class="nav-link" >Insertar</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link"  [routerLink]="['/service']">Servicios</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link"  [routerLink]="['/servicepersona']">Servicios Persona</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link"  [routerLink]="['/servicempleado']">Servicios Empleado</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link"  [routerLink]="['/servicempleadodos']">Servicios Empleado Dos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link"  [routerLink]="['/servicelista']">Servicios Empleado Lista</a>
+            <a class="nav-link" >Servicios</a>
           </li>
         </ul>
         <form>
