--- a/Angular/angularcruddepartamento/src/app/components/home/home.component.html
+++ b/Angular/angularcruddepartamento/src/app/components/home/home.component.html
@@ -16,7 +16,8 @@
                     <td>{{dept.nombre}}</td>
                     <td>{{dept.localidad}}</td>
                     <td>
-                        <a class="btn btn-secondary" [routerLink]="['/editar', dept.numero, dept.nombre, dept.localidad]">Editar</a>
+                        <a class="btn btn-secondary" [routerLink]="['/editar', dept.numero, dept.nombre, dept.localidad]">Editar</a>{{" "}}
+                        <button class="btn btn-danger" name="btnNumero" #btnNumero value="{{dept.numero}}" (click)="eliminarDepartamento()">Eliminar</button>
                     </td>
                 </tr>
             </tbody>
