--- a/Angular/proyectoapuestasangular/src/app/components/apuestas/apuestas.component.html
+++ b/Angular/proyectoapuestasangular/src/app/components/apuestas/apuestas.component.html
@@ -39,3 +39,26 @@
         </div>
     </div>
 </div>
+
+<div  class="row justify-content-center">
+    <div  class="col-8 text-center" *ngIf="!apuestas">
+        <div class="spinner-grow text-primary" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+          <div class="spinner-grow text-secondary" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+          <div class="spinner-grow text-success" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+          <div class="spinner-grow text-danger" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+          <div class="spinner-grow text-warning" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+          <div class="spinner-grow text-info" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+    </div>
+</div>
