--- a/Angular/examenangularaof/src/app/Components/detallespeliculas/detallespeliculas.component.html
+++ b/Angular/examenangularaof/src/app/Components/detallespeliculas/detallespeliculas.component.html
@@ -3,10 +3,17 @@
         <h1>{{pelicula.titulo}}</h1>
         <img width="150px" src="{{pelicula.foto}}" />
         <h2>{{pelicula.argumento}}</h2>
+        <h2>
+          Nacionalidad : {{nacionalidad.nombre}}
+        </h2>
+        <h2>
+          Genero : {{genero.nombre}}
+        </h2>
     </div>
     <div class="row justify-content-center">
         <div class="col-8 text-center"> 
-            <button data-bs-toggle="modal" data-bs-target="#myModal" style="background-color: firebrick; color: floralwhite;"><b>Eliminar</b></button>
+            <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#myModal" style="background-color: firebrick; color: floralwhite;"><b>Eliminar</b></button>
+            <a class="btn btn-warning" [routerLink]="['/modificar',pelicula.idPelicula]">Modificar</a>
         </div>
         <div class="modal" id="myModal">
             <div class="modal-dialog">
